migrated preview competencies strategy to use threadlocal instead of complicated json parsing